--- a/consensus/Cargo.toml
+++ b/consensus/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "blocks"
+name = "consensus"
 version = "0.1.0"
 authors = ["Tancredi <dylanphoon@gmail.com>"]
 
 [dependencies]
 
 [lib]
-name = "blocks"
-path = "lib.rs"
+name = "lib.rs"
+name = "consensus"
