--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Tancredi <dylanphoon@gmail.com>"]
 [dependencies]
 blocks = {path = "../blocks"}
 chain = {path = "../chain"}
+sha2 = "*"
 
 [lib]
 name = "utils"
