--- a/consensus/Cargo.toml
+++ b/consensus/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Tancredi <dylanphoon@gmail.com>"]
 vm = {path = "../core/rvm"}
 blocks = {path = "../blocks"}
 utils = {path = "../utils"}
+rkv = "*"
 
 [lib]
 path = "lib.rs"
