--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Tancredi <dylanphoon@gmail.com>"]
 blocks = {path = "../blocks"}
 chain = {path = "../chain"}
 sha2 = "*"
+rkv = "*"
 
 [lib]
 name = "utils"
