--- a/wallet/Cargo.toml
+++ b/wallet/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 authors = ["Tancredi <dylanphoon@gmail.com>"]
 
 [dependencies]
+utils = {path = "../utils"}
+consensus = {path = "../consensus"}
+
+[lib]
+name = "wallet"
+path = "lib.rs"
