--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,10 @@ utils = {path = "utils"}
 chain = {path = "chain"}
 openssl = "*"
 wallet = {path = "wallet"}
+curve25519-dalek = { version = "1.0.0-pre.0", features = ["serde"] }
+rand = "0.5"
+bulletproofs = {path = "../bulletproofs"}
+merlin = "1.0.0-pre.0"
 
 [workspace]
 members = [
